--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@vueuse/head": "^2.0.0",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "pinia": "^2.1.6",
